--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "@components/*": ["src/UI/components/*"],
       "@constants/*": ["src/constants/*"],
       "@utils/*": ["src/UI/utils/*"],
+      "@types/*": ["src/types/*"]
     },
     "types": ["node"]
   },
